Ensure length and font list is similar and catch freetype errors

Sometimes the font doesn't load, and then there's a mismatch in font and length
sizes, causing a crash. We try to make sure these values are the same, log an
error when the font cannot be loaded, and try to use a previous or fallback font
when a font cannot be loaded.

BUG:516204


(cherry picked from commit aa8c8c9d70b595fc77baffcec1979e81847e3cd7)

9e40160c Ensure length and font list is similar, add ability to identify freetype error.
3bb2f4e6 Add assert in KoFontRegistry, ensure the fallback font has it's fontsize configured.

Co-authored-by: Wolthera van Hövell <griffinvalley@gmail.com>